# csci5607-game

./: .gitattributes  .travis.yml  Cargo.toml  Justfile  README.md
maps/: floor.mtl  main.frag  main.vert  simple.map  textured.json  wall.mtl
src/: components.rs  lib.rs  main.rs  map.rs  state.rs  systems.rs  util.rs
src/gui/: controls.rs  decal.frag  decal.vert  mod.rs  model.rs  render.rs
src/map/: mod.rs
