[package]
authors = ["Nathan Ringo <remexre@gmail.com>"]
autobins = false
name = "game"
version = "0.1.0"

[dependencies]
cgmath = "0.16.1"
failure = "0.1.3"
# frunk = "0.2.3"
frunk = { "git" = "https://github.com/remexre/frunk.git", "branch" = "hmappable_fnmut" }
glium = "0.22.0"
image = "0.20.1"
lazy_static = "1.2.0"
log = "0.4.6"
obj = "0.9.0"
rayon = "1.0.3"
serde = "1.0.80"
serde_derive = "1.0.80"
serde_json = "1.0.33"
stderrlog = "0.4.1"
structopt = "0.2.13"
typemap = "0.3.3"
